--- a/Project.uvprojx
+++ b/Project.uvprojx
@@ -336,7 +336,7 @@
               <MiscControls></MiscControls>
               <Define>USE_STDPERIPH_DRIVER</Define>
               <Undefine></Undefine>
-              <IncludePath>.\Start;.\Library;.\User;.\System;.\Hardware</IncludePath>
+              <IncludePath>.\Start;.\Library;.\User;.\System;.\Hardware;.\Hardware\Mpu6050</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -690,6 +690,16 @@
               <FileType>5</FileType>
               <FilePath>.\System\comCONFgeneral.h</FilePath>
             </File>
+            <File>
+              <FileName>sys.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\System\sys.c</FilePath>
+            </File>
+            <File>
+              <FileName>sys.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\System\sys.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -750,6 +760,16 @@
               <FileType>5</FileType>
               <FilePath>.\Hardware\drive.h</FilePath>
             </File>
+            <File>
+              <FileName>grey.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Hardware\grey.c</FilePath>
+            </File>
+            <File>
+              <FileName>grey.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Hardware\grey.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -789,6 +809,61 @@
               <FileName>util.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\User\util.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>module</GroupName>
+          <Files>
+            <File>
+              <FileName>dmpKey.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Hardware\Mpu6050\dmpKey.h</FilePath>
+            </File>
+            <File>
+              <FileName>dmpmap.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Hardware\Mpu6050\dmpmap.h</FilePath>
+            </File>
+            <File>
+              <FileName>inv_mpu.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Hardware\Mpu6050\inv_mpu.c</FilePath>
+            </File>
+            <File>
+              <FileName>inv_mpu.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Hardware\Mpu6050\inv_mpu.h</FilePath>
+            </File>
+            <File>
+              <FileName>inv_mpu_dmp_motion_driver.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Hardware\Mpu6050\inv_mpu_dmp_motion_driver.c</FilePath>
+            </File>
+            <File>
+              <FileName>inv_mpu_dmp_motion_driver.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Hardware\Mpu6050\inv_mpu_dmp_motion_driver.h</FilePath>
+            </File>
+            <File>
+              <FileName>mpu6050.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Hardware\Mpu6050\mpu6050.c</FilePath>
+            </File>
+            <File>
+              <FileName>mpu6050.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Hardware\Mpu6050\mpu6050.h</FilePath>
+            </File>
+            <File>
+              <FileName>MPU6050_I2C.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Hardware\Mpu6050\MPU6050_I2C.c</FilePath>
+            </File>
+            <File>
+              <FileName>MPU6050_I2C.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Hardware\Mpu6050\MPU6050_I2C.h</FilePath>
             </File>
           </Files>
         </Group>
